--- a/css/style.css
+++ b/css/style.css
@@ -836,8 +836,10 @@ ul.portfolio-categ li a{
 	color: #14A085;
 }
 ul.portfolio-categ li.active{
-border: 1px solid #D7D8D6;
-background-color: #EAEAEA;
+
+border: 1px solid #D7D8D6;
+
+background-color: #EAEAEA;
 }
 ul.portfolio-categ li.active a:hover, ul.portfolio-categ li a:hover,ul.portfolio-categ li a:focus,ul.portfolio-categ li a:active {
 	text-decoration:none;
@@ -1762,4 +1764,15 @@ padding:50px 0
     margin: 0;
     padding: 22px 0 14px;
     font-size: 18px;
+}
+#more {display: none;}
+#more2 {display: none;}
+#more3 {display: none;}
+#more4 {display: none;}
+#testimonials{
+	background-color: transparent;
+	border: 2px solid white;
+	padding: 10px;
+	margin: 4px;
+	/* border-radius: 10%; */
 }
